fix: implementation of query feed
