# docs/swagger.json
@@ -7,13 +7,39 @@
         "/newsFeed": {
             "get": {
                 "description": "Gets a list of all feeds",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
                 "summary": "Gets a list of all feeds",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "source of the feed",
+                        "name": "source",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "category of the feed",
+                        "name": "category",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "post": {
+                "description": "Post a query to get a list of all feeds",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Post a query to get a list of all feeds",
                 "parameters": [
                     {
                         "description": "a map of sources to list of categories",
@@ -22,26 +48,11 @@
                         "schema": {
                             "$ref": "#/definitions/feed.feedQuery"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "source\t\t\t\tof the feed",
-                        "name": "source",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "category\tof\tthe\tfeed",
-                        "name": "category",
-                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "a list of feeds",
-                        "schema": {
-                            "$ref": "#/definitions/feed.feedQuery"
-                        }
+                        "description": "OK"
                     },
                     "404": {
                         "description": "Not Found"
@@ -58,10 +69,7 @@
                 "summary": "Gets a list of all feed categories",
                 "responses": {
                     "200": {
-                        "description": "a list of categories",
-                        "schema": {
-                            "$ref": "#/definitions/feed.category"
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -75,27 +83,13 @@
                 "summary": "Gets a list of all feed names",
                 "responses": {
                     "200": {
-                        "description": "a list of names",
-                        "schema": {
-                            "$ref": "#/definitions/feed.names"
-                        }
+                        "description": "OK"
                     }
                 }
             }
         }
     },
     "definitions": {
-        "feed.category": {
-            "type": "object",
-            "properties": {
-                "categories": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
         "feed.feedQuery": {
             "type": "object",
             "properties": {
@@ -106,17 +100,6 @@
                         "items": {
                             "type": "string"
                         }
-                    }
-                }
-            }
-        },
-        "feed.names": {
-            "type": "object",
-            "properties": {
-                "names": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
                     }
                 }
             }
